--- a/Desing Project/css/style.css
+++ b/Desing Project/css/style.css
@@ -756,9 +756,9 @@ h1 {
 }
 
 .card_flex_item {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 300px;
-          flex: 0 0 300px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 300px;
+          flex: 1 1 300px;
   min-height: 600px;
   position: relative;
   display: -webkit-box;
@@ -1649,6 +1649,9 @@ h1 {
   .section-card_card_flex {
     max-width: 638px;
     margin: 0 auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .card_flex_item {
     margin: 20px;
